objects/SpiceGroupData__c.object
<CustomObject>
    <fields>
        <fullName>CommentsAllowedInChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comments Allowed in Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <inlineHelpText>Please enter a 15 or 18 digit group Id,this field is case sensitive.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostsAllowedinChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posts Allowed in Chatter</label>
        <type>Checkbox</type>
    </fields>
    <label>Spice Group Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GroupId__c</columns>
        <columns>PostsAllowedinChatter__c</columns>
        <columns>CommentsAllowedInChatter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Chatter Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spice Group Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Salesforce_Id_Length</fullName>
        <active>true</active>
        <description>Validate Salesforce Id Length</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c), NOT(OR(LEN(GroupId__c)==15,LEN(GroupId__c)==18)))</errorConditionFormula>
        <errorDisplayField>GroupId__c</errorDisplayField>
        <errorMessage>Please enter a 15 digit or a 18 digit salesforce Id</errorMessage>
    </validationRules>
</CustomObject>